run exp 8 experiments

--- a/gen_results.ipynb
+++ b/gen_results.ipynb
@@ -82,6 +82,125 @@
     "plt.title('Execution Time Distribution by Number of Processes')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "bc049efb-8f39-4329-bc55-5366a1a7b9f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Resumo de execuções:\n",
+      "\n",
+      " power  total_particles  num_procs device  runs  mean_time  std_time  min_time  max_time  nodes  parallel_efficiency\n",
+      "     8        100000000          1    gpu     1   0.005930  0.000000  0.005930  0.005930      1             1.000000\n",
+      "     8        100000000          2    gpu     4   0.338304  0.004777  0.332230  0.342367      1             0.008764\n",
+      "     8        100000000          4    gpu     4   0.372697  0.005458  0.367056  0.377664      1             0.003978\n",
+      "     8        100000000          6    gpu     3   1.453448  0.027202  1.424730  1.478826      2             0.000680\n",
+      "     8        100000000          8    gpu     1   1.355293  0.000000  1.355293  1.355293      2             0.000547\n",
+      "     8        100000000         12    gpu     1   1.463573  0.000000  1.463573  1.463573      3             0.000338\n",
+      "     8        100000000         16    gpu     1   1.530388  0.000000  1.530388  1.530388      4             0.000242\n",
+      "     8        100000000         32    gpu     1   2.009445  0.000000  2.009445  2.009445      8             0.000092\n",
+      "     8        100000000         50    gpu     1   2.671302  0.000000  2.671302  2.671302     13             0.000044\n",
+      "     8        100000000         64    gpu     1   3.445744  0.000000  3.445744  3.445744     16             0.000027\n",
+      "     9       1000000000          1    gpu     1   0.059464  0.000000  0.059464  0.059464      1             1.000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import math\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# === Lê a planilha ===\n",
+    "df = pd.read_csv(\"../results.csv\")  # troque pelo nome do seu arquivo\n",
+    "df[\"datetime\"] = pd.to_datetime(df[\"datetime\"])\n",
+    "\n",
+    "# === Agrupa execuções repetidas (média, desvio, etc.) ===\n",
+    "group_cols = [\"power\", \"total_particles\", \"num_procs\", \"device\"]\n",
+    "agg = (\n",
+    "    df.groupby(group_cols)\n",
+    "      .agg(\n",
+    "          runs=(\"execution_time\", \"count\"),\n",
+    "          mean_time=(\"execution_time\", \"mean\"),\n",
+    "          std_time=(\"execution_time\", \"std\"),\n",
+    "          min_time=(\"execution_time\", \"min\"),\n",
+    "          max_time=(\"execution_time\", \"max\"),\n",
+    "      )\n",
+    "      .reset_index()\n",
+    ")\n",
+    "\n",
+    "# === Calcula número de nós ===\n",
+    "def calc_nodes(row):\n",
+    "    if row[\"device\"].lower() == \"cpu\":\n",
+    "        return int(math.ceil(row[\"num_procs\"] / 256.0))\n",
+    "    else:  # gpu/dpu\n",
+    "        return int(math.ceil(row[\"num_procs\"] / 4.0))\n",
+    "\n",
+    "agg[\"nodes\"] = agg.apply(calc_nodes, axis=1)\n",
+    "\n",
+    "# === Calcula eficiência paralela ===\n",
+    "baselines = (\n",
+    "    agg[agg[\"num_procs\"] == 1]\n",
+    "    .set_index([\"power\", \"total_particles\", \"device\"])[\"mean_time\"]\n",
+    ")\n",
+    "\n",
+    "def efficiency(row):\n",
+    "    key = (row[\"power\"], row[\"total_particles\"], row[\"device\"])\n",
+    "    T1 = baselines.get(key, np.nan)\n",
+    "    p = row[\"num_procs\"]\n",
+    "    Tp = row[\"mean_time\"]\n",
+    "    if pd.isna(T1) or Tp <= 0 or p <= 0:\n",
+    "        return np.nan\n",
+    "    return T1 / (p * Tp)\n",
+    "\n",
+    "agg[\"parallel_efficiency\"] = agg.apply(efficiency, axis=1)\n",
+    "\n",
+    "# === Mostra tabela no console ===\n",
+    "print(\"\\nResumo de execuções:\\n\")\n",
+    "print(agg.to_string(index=False))\n",
+    "\n",
+    "# === Faz gráfico de linhas (tempo vs nº de processos) ===\n",
+    "for (power, total_particles, device), subdf in agg.groupby([\"power\", \"total_particles\", \"device\"]):\n",
+    "    subdf = subdf.sort_values(\"num_procs\")\n",
+    "    plt.errorbar(\n",
+    "        subdf[\"num_procs\"],\n",
+    "        subdf[\"mean_time\"],\n",
+    "        yerr=subdf[\"std_time\"],\n",
+    "        marker=\"o\",\n",
+    "        capsize=4,\n",
+    "        label=f\"{device} (power={power}, N={total_particles})\"\n",
+    "    )\n",
+    "\n",
+    "plt.xlabel(\"Número de processos\")\n",
+    "plt.ylabel(\"Tempo médio de execução (s)\")\n",
+    "plt.title(\"Tempo de execução vs Nº de processos\")\n",
+    "plt.legend()\n",
+    "plt.grid(True)\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5168e4fa-fdfc-4f77-83b5-fe5e4d5bd888",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af2ef028-61bd-409f-88bd-592a3214b410",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
